Dodanie wyszukiwania konkretnych lotów

--- a/src/main/resources/static/menuSection.html
+++ b/src/main/resources/static/menuSection.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <h1>Here you can choose what you want to see</h1>
-<form action="/choosenFlights.html">
-    <p>If you want to see only choosen flight fill in this short form.</p>
+<form action="chosenFlights" method="get">
+    <p>If you want to see only chosen flight fill in this short form.</p>
 
-    <label for="farrival">Arrival:</label><br>
-    <input type="text" id="farrival" name="farrival"><br>
-    <label for="ldeprature">Departure:</label><br>
-    <input type="text" id="ldeprature" name="ldeprature"><br><br>
-    <input type="submit" value="Submit">
+    <label for="arrival">Arrival:</label><br>
+    <input type="text" id="arrival" name="arrival"><br>
+    <label for="departure">Departure:</label><br>
+    <input type="text" id="departure" name="departure"><br><br>
+    <input type="submit" onclick="location.href='/flightSection/chosenFlights' "value="Submit">
 </form>
 <br>
 <form action="flights" method="get">
